Filtro por categoria funcionando en sideBar

--- a/Client/src/views/HomePage.module.css
+++ b/Client/src/views/HomePage.module.css
@@ -1,4 +1,4 @@
-.main-content {
+.mainContent {
     padding: 20px;
-    margin-right: 250px; /* Asegúrate de que el contenido principal no se solape con la sidebar */
+    margin-left: 110px; /* Asegúrate de que el contenido principal no se solape con la sidebar */
 }
