--- a/Client/src/components/SideBar/Sidebar.module.css
+++ b/Client/src/components/SideBar/Sidebar.module.css
@@ -1,10 +1,10 @@
 .sidebar {
     position: fixed;
     top: 0;
-    right: 0;
+    left: -230px;
     height: 100%;
     width: 250px;
-    transform: translateX(100%);
+    transform: translateX(75%);
     transition: transform 0.3s ease-in-out;
     background-color: #333;
     color: white;
@@ -20,7 +20,7 @@
 .toggleButton {
     position: absolute;
     top: 20px;
-    left: -30px;
+    right: -30px;
     background-color: #333;
     color: white;
     border: none;
@@ -30,7 +30,7 @@
 }
 
 .sidebarOpenToggleButton {
-    left: -60px;
+    right: -30px;
 }
 
 .content {
