modifique la landing para que quede mas profesional y agradable a la vista

--- a/Client/src/views/LandingPage.css
+++ b/Client/src/views/LandingPage.css
@@ -1,193 +1,209 @@
+@import "https://unpkg.com/open-props";
 
-.landing-container {
-    font-family: "Oswald", sans-serif;
-    color: white;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
-      1px 1px 0 #000;
-    background-color: var(--color-fondo);
-    position: relative; 
-  }
-  
-  .background-video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
-  }
-  
-  .header {
-    background-image: linear-gradient(#004f80, #0088cc);
-    color: white;
-    text-align: center;
-    padding: 10px 0;
-    border-bottom: 2px solid black;
-    transition: all 0.3s ease; 
-  }
-  
-  .header:hover {
-    transform: scale(1.05); 
-  }
-  
-  .title {
-    font-size: 3em;
-    margin: 0;
-  }
-  
-  .subtitle {
-    font-size: 1.5em;
-    margin: 0;
-  }
-  
-  .main-content {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 10px;
-  }
-  
-  .hero-section {
-    text-align: center;
-    margin: 5px 0;
-  }
-  
-  .carousel {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .carousel-button {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    border: none;
-    padding: 10px;
-    cursor: pointer;
-    z-index: 1;
-  }
-  
-  .carousel-button.left {
-    left: 10px;
-    background-image: linear-gradient(#004f80, #0088cc);
-  }
-  
-  .carousel-button.right {
-    right: 10px;
-    background-image: linear-gradient(#004f80, #0088cc);
-  }
-  
-  .hero-image {
-    width: 800px;
-    height: 700px;
-    object-fit: cover;
-  }
-  
-  .hero-title {
-    font-size: 2em;
-    margin: 20px 0;
-  }
-  
-  .hero-description {
-    font-size: 1.2em;
-    margin: 20px 0;
-  }
-  
-  .cta-button {
-    display: inline-block;
-    padding: 10px 20px;
-    background-image: linear-gradient(#004f80, #0088cc);
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-    margin-top: 20px;
-    transition: all 0.3s ease;
-  }
-  
-  .cta-button:hover {
-    transform: scale(1.05); 
-  }
-  
-  .cta-button::after {
-    content: "Go!";
-    position: absolute;
-    bottom: -20px;
-    left: 50%;
-    transform: translateX(-50%);
-    opacity: 0;
-    transition: opacity 0.3s ease;
-    color: white;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
-      1px 1px 0 #000;
-  }
-  
-  .cta-button:hover::after {
-    opacity: 1;
-  }
-  
-  .testimonials-section {
-    text-align: center;
-    margin: 40px 0;
-  }
-  
-  .testimonials-title {
-    font-size: 1.5em;
-    margin-bottom: 20px;
-  }
-  
-  .testimonials-container {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    color: white;
-  }
-  
-  .testimonial {
-    width: 45%;
-    border: 1px solid #ddd;
-    padding: 20px;
-    border-radius: 5px;
-    margin-bottom: 20px;
-    text-align: left;
-    background-image: linear-gradient(#004f80, #0088cc);
-    transition: all 0.3s ease;
-  }
-  
-  .testimonial:hover {
-    transform: scale(1.05); /* Aumenta el tamaño del contenedor */
-  }
-  
-  .testimonial p {
-    margin: 0 0 10px;
-  }
-  
-  .testimonial-author {
-    font-weight: bold;
-  }
-  
-  .footer {
-    background-image: linear-gradient(#004f80, #0088cc);
-    color: white;
-    text-align: center;
-    padding: 10px 0;
-    transition: all 0.3s ease;
-  }
-  
-  .footer:hover {
-    transform: scale(1.02); 
-  }
-  
-  .github-link {
-    color: white;
-  
-    text-decoration: underline;
-  }
-  
-  .github-link:hover {
-    color: #ccc;
-  }
-  
+button {
+  font-family: var(--font-sans);
+  font-weight: var(--font-weight-6);
+  font-size: 1em;
+  color: var(--gray-8);
+  background: linear-gradient(45deg, #ff8200, #ffdd00);
+  border: 0;
+  padding: 15px 30px;
+  position: relative;
+  transform: translateY(calc(var(--y, 0) * 1%)) scale(var(--scale));
+  transition: transform 0.1s;
+}
+
+button {
+  transform: translateY(calc(var(--y, 0) * 1%)) scale(var(--scale));
+  transition: transform 0.1s;
+}
+
+button:hover {
+  --y: -10;
+  --scale: 1.1;
+  --border-scale: 1;
+}
+
+button:active {
+  --y: 5%;
+  --scale: 0.9;
+  --border-scale: 0.9, 0.8;
+}
+
+button:before {
+  content: "";
+  position: absolute;
+  inset: calc(var(--size-3) * -1);
+  border: var(--size-2) solid var(--gray-0);
+  transform: scale(var(--border-scale, 0));
+  transition: transform 0.125s;
+
+  --angle-one: 105deg;
+  --angle-two: 290deg;
+  --spread-one: 30deg;
+  --spread-two: 40deg;
+  --start-one: calc(var(--angle-one) - (var(--spread-one) * 0.5));
+  --start-two: calc(var(--angle-two) - (var(--spread-two) * 0.5));
+  --end-one: calc(var(--angle-one) + (var(--spread-one) * 0.5));
+  --end-two: calc(var(--angle-two) + (var(--spread-two) * 0.5));
+
+  mask: conic-gradient(
+    transparent 0 var(--start-one),
+    white var(--start-one) var(--end-one),
+    transparent var(--end-one) var(--start-two),
+    white var(--start-two) var(--end-two),
+    transparent var(--end-two)
+  );
+
+  z-index: -1;
+}
+
+h1,
+h2 {
+  transition: transform 0.3s, text-shadow 0.3s;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+h1:hover,
+h2:hover {
+  transform: scale(1.1);
+  text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
+}
+body {
+  margin: 0;
+  font-family: "Oswald", sans-serif;
+  background-color: #f4f4f9;
+  color: #333;
+}
+
+.container {
+  text-align: center;
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+  background-color: #333;
+}
+
+.navbar-logo {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+}
+
+.navbar-logo img {
+  height: 40px;
+  width: auto;
+}
+.navbar-links a {
+  color: #fff;
+  margin: 0 10px;
+  text-decoration: none;
+}
+
+.navbar-links a:hover {
+  text-decoration: underline;
+}
+
+.banner {
+  position: relative;
+  width: 100%;
+  height: 31vh;
+  overflow: hidden;
+}
+
+#background-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
+.banner-content {
+  position: relative;
+  z-index: 1;
+  color: #000;
+  padding: 50px 20px;
+}
+
+.banner-content h1 {
+  margin: 0;
+  font-size: 3em;
+}
+
+.banner-content p {
+  font-size: 1.3em;
+  margin: 20px 0;
+  font-weight: bold;
+}
+
+.features {
+  padding: 50px 20px;
+  background-color: #fff;
+}
+
+.features h2 {
+  font-size: 2.5em;
+  margin-bottom: 20px;
+}
+
+.feature-cards {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.feature-card {
+  background: #f9f9f9;
+  border-radius: 10px;
+  padding: 20px;
+  margin: 10px;
+  max-width: 300px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.testimonials {
+  padding: 50px 20px;
+  background-color: #f4f4f9;
+}
+
+.testimonials h2 {
+  font-size: 2.5em;
+  margin-bottom: 20px;
+}
+
+.testimonial {
+  background: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  margin: 20px auto;
+  max-width: 600px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.footer {
+  background: #333;
+  color: #fff;
+  padding: 20px;
+}
+
+.github-button {
+  padding: 10px 20px;
+  font-size: 1em;
+  color: #fff;
+  background-color: #333;
+  border: 2px solid #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.github-button:hover {
+  background-color: #555;
+}
