Cambio vista de login y register a una ventana emergente en toda la pantalla

--- a/Client/src/components/SearchBar/navbar.css
+++ b/Client/src/components/SearchBar/navbar.css
@@ -17,7 +17,7 @@
     background-color: #ebeaeac7;
   }
   
-  button[type="submit"] {
+  .search-button {
     padding: 10px;
     background-color: #f6971a;
     border: none;
