--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -14,6 +14,13 @@
   }
 }
 
+.floating-logos {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 1; /* Asegura que los logos estén detrás del texto de bienvenida */
+}
+
 .floating-logo {
   position: absolute;
   width: 80px;
@@ -23,39 +30,76 @@
   animation: float 5s ease-in-out infinite;
 }
 
+.floating-logo img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.floating-logo:nth-child(1) {
+  top: 5%;
+  left: 5%;
+  animation-delay: 0s;
+}
+
+.floating-logo:nth-child(2) {
+  top: 15%;
+  left: 60%;
+  animation-delay: 1s;
+}
+
+.floating-logo:nth-child(3) {
+  top: 25%;
+  left: 85%;
+  animation-delay: 2s;
+}
+
+.floating-logo:nth-child(4) {
+  top: 55%;
+  left: 10%;
+  animation-delay: 3s;
+}
+
+.floating-logo:nth-child(5) {
+  top: 65%;
+  left: 75%;
+  animation-delay: 4s;
+}
+
 .header-content {
   position: relative;
-  z-index: 10;
+  z-index: 10; /* Asegura que el texto de bienvenida esté frente a los logos */
   text-align: center;
   color: white;
   padding: 2rem;
 }
 
-:root {
+  
+  :root {
   --primary-color: #1a73e8; /* Cambia esto por tu color primario */
 }
 
 @keyframes lights {
-  0% {
-    filter: brightness(40%) contrast(120%);
+    0% {
+      filter: brightness(40%) contrast(120%);
+    }
+    50% {
+      filter: brightness(60%) contrast(80%);
+    }
+    100% {
+      filter: brightness(40%) contrast(120%);
+    }
   }
-  50% {
-    filter: brightness(60%) contrast(80%);
+  
+  .header-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom right, #1a73e8, #60a5fa, #bbdefb, #60a5fa, #1a73e8);
+    animation: lights 10s ease-in-out infinite alternate;
   }
-  100% {
-    filter: brightness(40%) contrast(120%);
-  }
-}
-
-.header-background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(to bottom right, #1a73e8, #60a5fa, #bbdefb, #60a5fa, #1a73e8);
-  animation: lights 10s ease-in-out infinite alternate;
-}
   
   
   /* TestimonialCard.css */
