Arreglando un poco el nav

--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -131,3 +131,48 @@
     transform: translateX(0);
   }
   
+
+  /* NAV */
+
+ /* NAV */
+
+/* NAV */
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 80px; /* Reducir el ancho del tooltip */
+  background-color: #FF8200;
+  color: #dfdfdf;
+  text-align: center;
+  border-radius: 6px;
+  padding: 3px 8px; /* Ajustar el padding */
+  position: absolute;
+  z-index: 1;
+  top: 125%; /* Posiciona el tooltip debajo del elemento */
+  left: 50%;
+  margin-left: -40px; /* Usa margen negativo para centrar el tooltip */
+  opacity: 0;
+  transition: opacity 0.3s;
+  font-size: 12px; /* Ajustar el tamaño de la fuente */
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  bottom: 100%; /* En el borde superior del tooltip */
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #FF8200 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
