--- a/dashboard/styles/globals.css
+++ b/dashboard/styles/globals.css
@@ -2,32 +2,55 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+img{
+    max-height: 100%;
+}
+input, textarea, select{
+    @apply border border-gray-200 rounded-sm w-full py-2 px-4;
+    @apply mb-2;
+}
+input:focus, textarea:focus, select:focus{
+    @apply border-blue-900;
+}
+h1{
+    @apply text-gray-800 mb-4 text-xl;
+}
+label{
+    @apply text-gray-600 text-sm;
+}
+.btn-primary{
+    @apply bg-primary text-white px-4 py-1 rounded-sm shadow-sm;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.btn-primary:hover{
+    @apply bg-violet-700 text-white shadow-md;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+table.basic{
+    @apply w-full bg-white rounded-sm shadow-md;
 }
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+table.basic thead tr td,
+table.basic thead tr th {
+    @apply text-sm text-gray-600 uppercase p-2 border-b border-gray-200 px-4 py-2;
+}
+table.basic tr td{
+    @apply px-4 py-1;
+}
+table.basic a{
+    @apply px-4 py-1 rounded-sm inline-flex mx-1 items-center gap-2 text-sm;
+}
+.btn-default, .btn-red{
+    @apply px-4 py-1 rounded-md;
+}
+.btn-red{
+    @apply bg-red-200 text-white px-4 py-1 rounded-sm shadow-sm;
+}
+.btn-red:hover{
+    @apply bg-red-300 text-red-800;
+}
+.btn-default{
+    @apply bg-white text-gray-800 px-4 py-1 rounded-sm border border-gray-200 shadow-sm;
+}
+.btn-default:hover{
+    @apply bg-gray-100 text-gray-600;
 }
