--- a/Client/src/views/ProductDetail.css
+++ b/Client/src/views/ProductDetail.css
@@ -11,6 +11,25 @@
     font-weight: bold;
     margin-top: 10px;
     margin-bottom: 10px;
+    margin-right: 10px;
+    padding: 15px 30px;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  }
+  .fav-button {
+    display: inline-block;
+    background-color: rgb(255, 235, 235);
+    color: rgb(255, 130, 0);
+    font-size: 1.2em;
+    font-weight: bold;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
     padding: 15px 30px;
     border: none;
     border-radius: 8px;
@@ -23,6 +42,11 @@
   
   .buy-button:hover {
     background-color: rgb(255, 100, 0);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  }
+
+  .fav-button:hover {
+    background-color: rgb(255, 220, 220);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   }
   
